# search_vacancy_project_5

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py
src/: API.py  DBManager.py  database.py  employers.py  vacancies.py
tests/: conftest.py  test_API.py  test_DBManager.py  test_database.py  test_employers.py  test_vacancies.py
